--- a/index.html
+++ b/index.html
@@ -5,4 +5,19 @@
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Dao Kha Tuan">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "stylesheet" href="style.css">
+    <script src="script.js" defer></script>
   </head>
+<body>
+  <div class = "topnav">
+    <img src="image/personalPicture.jpg" width="40px">
+    <a href="experiences">Work Experiences</a>
+    <a href="skill">Skills</a>
+    <a href="#certifications">Certifications</a>
+    <a href="#education">Education</a>
+    <a class="active" href="#profile">My Profile</a>
+  </div>
+  <div class="content">
+    <h1>hello</h1>
+  </div>
+</body>
