--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
     <script src="script.js" defer></script>
   </head>
 <body>
-  <div class = "topnav">
-    <img src="image/personalPicture.jpg" width="40px">
-    <a href="experiences">Work Experiences</a>
-    <a href="skill">Skills</a>
-    <a href="#certifications">Certifications</a>
-    <a href="#education">Education</a>
-    <a class="active" href="#profile">My Profile</a>
-  </div>
-  <div class="content">
-    <h1>hello</h1>
-  </div>
+  <header>
+    <div class = "topnav">
+      <div class = "logo">
+        <img src="image/personalPicture.jpg" width="40px">
+      </div>
+      <div class = "topnav-right">
+        <a class="active" href="#profile">My Profile</a>
+        <a href="#education">Education</a>
+        <a href="#certifications">Certifications</a>
+        <a href="skill">Skills</a>
+        <a href="experiences">Work Experiences</a>
+      </div>
+    </div>
+  </header>
 </body>
