--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
   <header>
     <div class = "topnav">
       <div class = "logo">
-        <img src="image/personalPicture.jpg" width="40px">
+        <img src="image/personalPicture.jpg" width="50px">
       </div>
       <div class = "topnav-right">
-        <a class="active" href="#profile">My Profile</a>
+        <a class="active" href="#aboutme">About me</a>
         <a href="#education">Education</a>
         <a href="#certifications">Certifications</a>
-        <a href="skill">Skills</a>
-        <a href="experiences">Work Experiences</a>
+        <a href="#skill">Skills</a>
+        <a href="#experiences">Experiences</a>
+        <a href="#contact">Contact</a>
       </div>
     </div>
   </header>
