--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>About me</title>
+    <title>Contact</title>
     <meta charset="UTF-8">
     <meta name="description" content="Online CV for future job applications">
     <meta name="keywords" content="HTML, CSS, JavaScript">
