--- a/experience.html
+++ b/experience.html
@@ -16,11 +16,11 @@
         <img src="image/personalPicture.jpg" width="50px">
       </div>
       <div class = "topnav-right">
-        <a class="active" href="index.html">About me</a>
+        <a href="index.html">About me</a>
         <a href="education.html">Education</a>
         <a href="certification.html">Certifications</a>
         <a href="skill.html">Skills</a>
-        <a href="experience.html">Experiences</a>
+        <a class="active" href="experience.html">Experiences</a>
         <a href="contact.html">Contact</a>
       </div>
     </div>
