--- a/education.html
+++ b/education.html
@@ -16,8 +16,8 @@
         <img src="image/personalPicture.jpg" width="50px">
       </div>
       <div class = "topnav-right">
-        <a class="active" href="index.html">About me</a>
-        <a href="education.html">Education</a>
+        <a href="index.html">About me</a>
+        <a class="active" href="education.html">Education</a>
         <a href="certification.html">Certifications</a>
         <a href="skill.html">Skills</a>
         <a href="experience.html">Experiences</a>
