--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Contact</title>
+    <title>About me</title>
     <meta charset="UTF-8">
     <meta name="description" content="Online CV for future job applications">
     <meta name="keywords" content="HTML, CSS, JavaScript">
@@ -13,7 +13,7 @@
   <header>
     <div class = "topnav">
       <div class = "logo">
-        <img src="image/personalPicture.jpg" width="50px">
+        <h1>My CV</h1>
       </div>
       <div class = "topnav-right">
         <a href="index.html">About me</a>
