--- a/index.html
+++ b/index.html
@@ -11,16 +11,21 @@
   </head>
 <body>
   <header>
-    <div class = "topnav">
+    <nav>
       <div class = "logo">
         <h1>My CV</h1>
       </div>
       <div class = "topnav-right">
-        <a class="active" href="index.html">About me</a>
-        <a href="education.html">Education</a>
-        <a href="skill.html">Skills</a>
-        <a href="experience.html">Experiences</a>
+        <a href="#about_me">About me</a>
+        <a href="#education">Education</a>
+        <a href="#skill">Skills</a>
+        <a href="#experience">Experiences</a>
       </div>
-    </div>
+    </nav>
   </header>
+  <!-- link to the gif -->
+  <!-- /* https://giphy.com/gifs/code-coding-seamless-xT9IgzoKnwFNmISR8I  */ -->
+  <section id="about_me">
+    <div id="gif"></div>
+  </section>
 </body>
