update the about_me

--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
   <!-- /* https://giphy.com/gifs/code-coding-seamless-xT9IgzoKnwFNmISR8I  */ -->
   <section id="about_me">
     <div id="gif"></div>
+    <div id="info">
+      <h1>ABOUT ME</h1>
+      <img src="./image/personalPicture.jpg" alt="personal picture">
+    </div>
   </section>
 </body>
