--- a/index.html
+++ b/index.html
@@ -25,11 +25,25 @@
   </header>
   <!-- link to the gif -->
   <!-- /* https://giphy.com/gifs/code-coding-seamless-xT9IgzoKnwFNmISR8I  */ -->
+  <div class="gif gif1">
+      <h1 id="welcome">Welcome to my website!</h1>
+  </div>
   <section id="about_me">
-    <div id="gif"></div>
     <div id="info">
       <h1>ABOUT ME</h1>
       <img src="./image/personalPicture.jpg" alt="personal picture">
+      <ul>
+        <li>Name: Dao Kha Tuan</li>
+        <li>Age: 19</li>
+        <li>Address: 4519 Nguyen Cuu Phu Street, Tan Tao A Ward, Binh Tan District, HCM.</li>
+        <li>Email address: tuan09092002@gmail.com</li>
+      </ul>
     </div>
+    <div class="gif gif2">
+  </div>  
+  </section>
+
+  <section id="education">
+
   </section>
 </body>
