--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
         <li>Email address: tuan09092002@gmail.com</li>
       </ul>
     </div>
-    <div class="gif gif2">
+  <!-- link to the gif -->
+  <!-- https://giphy.com/gifs/stardust-stardustae-classic-computers-4H3Ii5eLChYul9p7NL -->
+  <div class="gif gif2">
   </div>  
   </section>
 
