--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <section id="about_me">
     <div id="info">
       <h1>ABOUT ME</h1>
-      <img src="./image/personalPicture.jpg" alt="personal picture">
+      <img id="personal" src="./image/personalPicture.jpg" alt="personal picture">
       <ul>
         <li>Name: Dao Kha Tuan</li>
         <li>Age: 19</li>
@@ -39,13 +39,24 @@
         <li>Email address: tuan09092002@gmail.com</li>
       </ul>
     </div>
+  </section>
   <!-- link to the gif -->
-  <!-- https://giphy.com/gifs/stardust-stardustae-classic-computers-4H3Ii5eLChYul9p7NL -->
+  <!-- https://giphy.com/gifs/code-ko7twHhomhk8E   -->
   <div class="gif gif2">
   </div>  
-  </section>
-
   <section id="education">
-
+    <div id="info">
+      <h1>Education</h1>
+      <!-- Author: Mike Palumbo 
+      Copyright: Mike Palumbo Photography -->
+      <a href="https://www.rmit.edu.vn/" target="about_blank">
+        <img id="campus" src="./image/sgs-campus-night-03.jpg" alt="RMIT Campus">
+      </a>
+      <ul>
+        <li>Studied at RMIT University</li>
+        <li>Subject: Information Technology (IT)</li>
+        <li>GPA: ...</li>
+      </ul>
+    </div>
   </section>
 </body>
