--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class = "topnav-right">
         <a href="#about_me">About me</a>
         <a href="#education">Education</a>
-        <a href="#skill">Skills</a>
+        <a href="#skills">Skills</a>
         <a href="#experience">Experiences</a>
       </div>
     </nav>
@@ -26,7 +26,7 @@
   <!-- link to the gif -->
   <!-- /* https://giphy.com/gifs/code-coding-seamless-xT9IgzoKnwFNmISR8I  */ -->
   <div class="gif gif1">
-      <h1 id="welcome">Welcome to my website!</h1>
+      <h1 id="welcome">Welcome to my CV website!</h1>
   </div>
   <section id="about_me">
     <div id="info">
@@ -42,21 +42,29 @@
   </section>
   <!-- link to the gif -->
   <!-- https://giphy.com/gifs/code-ko7twHhomhk8E   -->
-  <div class="gif gif2">
-  </div>  
+  <div class="gif gif2"></div>  
   <section id="education">
     <div id="info">
-      <h1>Education</h1>
+      <h1>EDUCATION</h1>
       <!-- Author: Mike Palumbo 
       Copyright: Mike Palumbo Photography -->
       <a href="https://www.rmit.edu.vn/" target="about_blank">
         <img id="campus" src="./image/sgs-campus-night-03.jpg" alt="RMIT Campus">
       </a>
       <ul>
-        <li>Studied at RMIT University</li>
-        <li>Subject: Information Technology (IT)</li>
+        <li>Studied at RMIT University from 2020 - 2023</li>
+        <li>Degree: Bachelor of Information Technology (IT)</li>
+        <li>Certifications: ...</li>
         <li>GPA: ...</li>
       </ul>
+    </div>
+  </section>
+  <!-- link to the gif -->
+  <!-- https://giphy.com/gifs/tech-technology-mograph-pOEbLRT4SwD35IELiQ -->
+  <div class="gif gif3"></div>
+  <section id="skills">
+    <div id="info">
+      <h1>SKILLS</h1>
     </div>
   </section>
 </body>
