--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <ul>
         <li>Name: Dao Kha Tuan</li>
         <li>Age: 19</li>
-        <li>Address: 4519 Nguyen Cuu Phu Street, Tan Tao A Ward, Binh Tan District, HCM.</li>
+        <li>Address: <a target="about_blank" href="https://www.google.com/maps/place/4519+Nguy%E1%BB%85n+C%E1%BB%ADu+Ph%C3%BA,+T%C3%A2n+T%E1%BA%A1o+A,+B%C3%ACnh+T%C3%A2n,+Th%C3%A0nh+ph%E1%BB%91+H%E1%BB%93+Ch%C3%AD+Minh,+Vi%E1%BB%87t+Nam/@10.7556613,106.5842006,17z/data=!3m1!4b1!4m5!3m4!1s0x31752c546ac529d3:0xf2dc6e5a6768c49!8m2!3d10.7556613!4d106.5863893?hl=vi-VN">4519 Nguyen Cuu Phu Street, Tan Tao A Ward, Binh Tan District, HCM.</a></li>
         <li>Email address: tuan09092002@gmail.com</li>
       </ul>
     </div>
