--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <li>Degree: Bachelor of Information Technology (IT)</li>
         <li>Certifications: ...</li>
         <li>GPA: ...</li>
+        <li id="future">Future implication: Having an <a target="about_blank" href="https://aws.amazon.com/certification/certified-solutions-architect-associate/">AWS Certified Solutions Architect</a></li>
       </ul>
     </div>
   </section>
