--- a/index.html
+++ b/index.html
@@ -66,6 +66,17 @@
   <section id="skills">
     <div id="info">
       <h1>SKILLS</h1>
+      <h2>Proficent in</h2>
+      <div id="coding_languages">
+        <div id="title">
+          <h3>Coding languages:</h3>
+        </div>
+        <div id="group">
+          <img src="image/html5.jpg">
+          <img src="image/html5.jpg">
+          <img src="image/html5.jpg">
+        </div>
+      </div>
     </div>
   </section>
 </body>
