--- a/index.html
+++ b/index.html
@@ -72,9 +72,12 @@
           <h3>Coding languages:</h3>
         </div>
         <div id="group">
-          <img src="image/html5.jpg">
-          <img src="image/html5.jpg">
-          <img src="image/html5.jpg">
+          <!-- https://pixabay.com/vi/illustrations/logo-html-html5-bi%E1%BB%83u-t%C6%B0%E1%BB%A3ng-2582748/ -->
+          <img src="./image/html5.jpg" alt="html5">
+           <!-- https://freebiesupply.com/logos/javascript-logo/ -->        
+          <img src="./image/javascript.png" alt="javascript">
+          <!-- https://pixabay.com/vi/illustrations/logo-css-css3-bi%E1%BB%83u-t%C6%B0%E1%BB%A3ng-2582747/ -->
+          <img src="./image/css3.png" alt="css3">
         </div>
       </div>
     </div>
