--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <h1>SKILLS</h1>
       <h2>Proficent in</h2>
       <div id="coding_languages">
-        <div id="title">
+        <div class="title">
           <h3>Coding languages:</h3>
         </div>
         <div class="group group1">
@@ -84,6 +84,15 @@
            <img src="./image/mysql.png" alt="mysql">
            <!-- https://www.redbubble.com/shop/postgresql+stickers -->
            <img src="./image/postgresql.jpg" alt="postgresql">
+        </div>
+      </div>
+      <div id="tools">
+        <div class="title">
+          <h3>Tools:</h3>
+        </div>
+        <div class="group">
+          <!-- https://www.influxdata.com/influxdb-templates/github/ -->
+          <img src="./image/github.jpg" alt="github">
         </div>
       </div>
     </div>
