--- a/index.html
+++ b/index.html
@@ -92,7 +92,14 @@
         </div>
         <div class="group">
           <!-- https://www.influxdata.com/influxdb-templates/github/ -->
-          <img src="./image/github.jpg" alt="github">
+          <div class="container">
+            <img class="cover" src="./image/github.jpg">
+            <div class="hidden">
+              <a href="https://github.com/TuanDao2002" target="about_blank">
+                <div class="redirect">Redirect to my Github</div>
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
