--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="#about_me">About me</a>
         <a href="#education">Education</a>
         <a href="#skills">Skills</a>
-        <a href="#experience">Experiences</a>
+        <a href="#experiences">Experiences</a>
       </div>
     </nav>
   </header>
@@ -102,6 +102,15 @@
           </div>
         </div>
       </div>
+    </div>
+  </section>
+  <!-- link to the gif -->
+  <!-- https://giphy.com/gifs/loop-processing-central-970Sr8vpwEbXG -->
+  <div class="gif gif4"></div>
+  <section id="experiences">
+    <div id="info">
+      <h1>EXPERIENCES</h1>
+      <h2>Have experience in working in a website project:</h2>
     </div>
   </section>
 </body>
