--- a/index.html
+++ b/index.html
@@ -111,6 +111,14 @@
     <div id="info">
       <h1>EXPERIENCES</h1>
       <h2>Have experience in working in a website project:</h2>
+      <div class="transition">
+        <img class="top" src="./image/merlin.png">
+        <div class="down">
+          <a href="https://merlinformen.netlify.app/?fbclid=IwAR0hoUQcniIS7JEI0FwPTzeaoO1Bf9hjtgQDiVyzCLBvRV1G_mr0uN5J140" target="about_blank">
+            <div class="tab">Redirect to Merlin website</div>
+          </a>
+        </div>
+      </div>
     </div>
   </section>
 </body>
