--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <img class="top" src="./image/merlin.png">
         <div class="down">
           <a href="https://merlinformen.netlify.app/?fbclid=IwAR0hoUQcniIS7JEI0FwPTzeaoO1Bf9hjtgQDiVyzCLBvRV1G_mr0uN5J140" target="about_blank">
-            <div class="tab">Redirect to Merlin website</div>
+            <div id="text">Redirect to Merlin website</div>
           </a>
         </div>
       </div>
