--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="author" content="Dao Kha Tuan">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href="style.css">
-    <script src="script.js" defer></script>
-  </head>
+    <script src="https://kit.fontawesome.com/a076d05399.js" defer></script>  </head>
 <body>
   <header>
     <nav>
@@ -20,6 +19,7 @@
         <a href="#education">Education</a>
         <a href="#skills">Skills</a>
         <a href="#experiences">Experiences</a>
+        <a href="#contact">Contact</a>
       </div>
     </nav>
   </header>
@@ -122,4 +122,8 @@
       </div>
     </div>
   </section>
+  <footer id="contact">
+    <h2>Contact me</h2>
+    <h1><i class="fab fa-facebook"></i></h1>
+  </footer>
 </body>
