--- a/index.html
+++ b/index.html
@@ -124,6 +124,6 @@
   </section>
   <footer id="contact">
     <h2>Contact me</h2>
-    <h1><i class="fab fa-facebook"></i></h1>
+    <h1><a target="auto_blank" href="https://www.facebook.com/profile.php?id=100018171336498"><i class="fab fa-facebook"></i></a></h1>
   </footer>
 </body>
