--- a/index.html
+++ b/index.html
@@ -125,6 +125,6 @@
   <footer id="contact">
     <h2>Contact me</h2>
     <h1><a target="auto_blank" href="https://www.facebook.com/profile.php?id=100018171336498"><i class="fab fa-facebook"></i></a></h1>
-    <h1><a target="auto_blank" href="https://www.facebook.com/messages/t/100018171336498"><i class="fab fa-facebook-messenger"></i></a></h1>
+    <span><h1><a target="auto_blank" href="https://www.facebook.com/messages/t/100018171336498"><i class="fab fa-facebook-messenger"></i></a></h1></span>
   </footer>
 </body>
