--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <head>
     <title>About me</title>
     <meta charset="UTF-8">
+    <meta name="referrer" content="strict-origin"/>
     <meta name="description" content="Online CV for future job applications">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Dao Kha Tuan">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js" defer></script>  </head>
+    <script src="https://kit.fontawesome.com/a076d05399.js" defer></script>  
+</head>
 <body>
   <header>
     <nav>
@@ -75,7 +77,7 @@
           <!-- https://pixabay.com/vi/illustrations/logo-html-html5-bi%E1%BB%83u-t%C6%B0%E1%BB%A3ng-2582748/ -->
           <img src="./image/html5.jpg" alt="html5">
            <!-- https://freebiesupply.com/logos/javascript-logo/ -->        
-          <img src="./image/javascript.png" alt="javascript">
+          <img id="javascript" src="./image/javascript.png" alt="javascript">
           <!-- https://pixabay.com/vi/illustrations/logo-css-css3-bi%E1%BB%83u-t%C6%B0%E1%BB%A3ng-2582747/ -->
           <img src="./image/css3.png" alt="css3">
         </div>
