--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="author" content="Dao Kha Tuan">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js" defer></script>  
 </head>
 <body>
   <header>
@@ -131,4 +130,5 @@
       <h1><a target="auto_blank" href="https://www.facebook.com/messages/t/100018171336498"><i class="fab fa-facebook-messenger"></i></a></h1>
     </div>
   </footer>
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script>  
 </body>
