--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<head>
+<html lang="en">
+  <head>
     <title>About me</title>
     <meta charset="UTF-8">
     <meta name="referrer" content="strict-origin"/>
@@ -74,7 +75,7 @@
         </div>
         <div class="group group1">
           <!-- https://pixabay.com/vi/illustrations/logo-html-html5-bi%E1%BB%83u-t%C6%B0%E1%BB%A3ng-2582748/ -->
-          <img src="./image/html5.jpg" alt="html5">
+          <img src="./image/html5.png" alt="html5">
            <!-- https://freebiesupply.com/logos/javascript-logo/ -->        
           <img id="javascript" src="./image/javascript.png" alt="javascript">
           <!-- https://pixabay.com/vi/illustrations/logo-css-css3-bi%E1%BB%83u-t%C6%B0%E1%BB%A3ng-2582747/ -->
@@ -132,3 +133,4 @@
   </footer>
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>  
 </body>
+</html>
