--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
       <h1>EXPERIENCES</h1>
       <h2>Have experience in working in a website project:</h2>
       <div class="transition">
-        <!-- <img class="top" src="./image/merlin.png"> -->
-        <embed class="top" src="https://merlinformen.netlify.app/?fbclid=IwAR17EYPh6ugJfrpZBLDyCQ2lSemmuAFcTXXbdFl7NYfqdypyyj7H_hyyM1A">
+        <img class="top" src="./image/merlin.png">
+        <!-- <embed class="top" src="https://merlinformen.netlify.app/?fbclid=IwAR17EYPh6ugJfrpZBLDyCQ2lSemmuAFcTXXbdFl7NYfqdypyyj7H_hyyM1A"> -->
         <div class="down">
           <a href="https://merlinformen.netlify.app/?fbclid=IwAR0hoUQcniIS7JEI0FwPTzeaoO1Bf9hjtgQDiVyzCLBvRV1G_mr0uN5J140" target="about_blank">
             <div id="text">Redirect to Merlin website</div>
