--- a/index.html
+++ b/index.html
@@ -126,10 +126,14 @@
   <footer id="contact">
     <h2>Contact me</h2>
     <div id="icon">
-      <h1><a target="auto_blank" href="https://www.facebook.com/profile.php?id=100018171336498"><i class="fab fa-facebook"></i></a></h1>
-      <h1><a target="auto_blank" href="https://www.facebook.com/messages/t/100018171336498"><i class="fab fa-facebook-messenger"></i></a></h1>
-    </div>
+      <a href="https://www.facebook.com/profile.php?id=100018171336498" target="auto_blank">
+        <!-- https://www.transparentpng.com/details/photo-facebook-logo-hd_9024.html -->
+        <img src="https://www.transparentpng.com/thumb/facebook-logo-png/photo-facebook-logo-png-hd-25.png" alt="photo facebook logo png hd @transparentpng.com">
+      </a>
+      <a href="https://www.facebook.com/messages/t/100018171336498" target="auto_blank">
+        <!-- https://www.freeiconspng.com/img/44097 -->
+        <img src="image/facebook-messenger-light-blue-logo-1.png" alt="Facebook Messenger light blue logo" />
+      </a>
   </footer>
-  <script src="https://kit.fontawesome.com/a076d05399.js"></script>  
 </body>
 </html>
